# sentinel-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  langgraph.json  pyproject.toml  sentinel_snowglobe.py
.snowglobe/: agents.json
data/: company_profile.md  compliance_matrix.json  compliance_matrix_revised.json
data/regulations/: README.md  california_ab853_ai_transparency_amendments.txt  california_sb53_frontier_ai_transparency.txt  california_sb942_ai_transparency_act.txt  ecoa_regulation_b_12cfr1002.txt  ecoa_regulation_b_12cfr1002.xml  eu_ai_act_2021_commission_proposal.txt  eu_ai_act_full_text.md  eu_amld4_directive_2015_849.txt  eu_eprivacy_directive_2002_58.txt  eu_funds_transfer_regulation_2015_847.txt  eu_mdr_regulation_2017_745.txt  eu_standard_contractual_clauses_2021_914.txt  fcra_fair_credit_reporting_act.txt  fda_21cfr_part11_electronic_records.txt  fda_21cfr_part11_electronic_records.xml  fda_21cfr_part807_premarket.txt  fda_21cfr_part807_premarket.xml  fda_21cfr_part820_qsr.txt  fda_21cfr_part820_qsr.xml  fda_ai_ml_samd_framework.txt  fda_clinical_decision_support_guidance.txt  gdpr_full_text.md  hipaa_45cfr_part160_2020.txt  hipaa_45cfr_part160_2020.xml  hipaa_45cfr_part160_general_admin.txt  hipaa_45cfr_part160_general_admin.xml  hipaa_45cfr_part162_2020.txt  hipaa_45cfr_part162_2020.xml  hipaa_45cfr_part164_2017.xml  (+30 more)
demo/: act1_prototype.py  act2_production.py  act3_simulation.py
scripts/: company_context.py  convert_ecfr_xml_to_txt.py  extract_pdf_text.py  fetch_eu_ai_act_articles.py  fetch_gdpr_articles.py  generate_sops.py  sop_taxonomy.py  validate_run.py
sentinel/: config.py  llm.py  models.py
tests/: conftest.py  test_config.py  test_json_parsing.py  test_list_sops_guidance.py  test_llm_provider.py  test_models.py  test_register.py  test_snowglobe_detection.py  test_sop_loading.py  test_ui_helpers.py
ui/: app.py
(+221 files in other folders)
