[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Regulatory & Compliance Auditor Agent — Nebius Blueprint for Agents"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.3.0",
    "pinecone[grpc]>=5.0.0",
    "tavily-python>=0.5.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
