[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Regulatory & Compliance Auditor Agent — Nebius Blueprint for Agents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.0",
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.8.0",
    "pinecone>=5.0.0",
    "tavily-python>=0.5.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "langgraph-cli>=0.2.0"]
